tests/NormalTests/paczka1/fuzzy1/37846464.err
Error in line 1: KJdCH A215 58,1
Error in line 18: KJdCH S967 56,5
Error in line 22: 69fPs5RtNEM A215 33,7
Error in line 21: KJdCH S870 55,7
Error in line 30: S967 A215 68,0
Error in line 26: KJdCH S967 13,5
Error in line 20: 9kpeCDjJ A215 88,7
